# aws-python-lambda-layer

./: .gitignore  Makefile  README.md  main.tf  providers.tf  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
src/: handler.py
tests/: test_handler.py  test_provider.tf
