[tool.poetry]
name = "aws-python-lambda-layer"
version = "0.1.0"
description = ""
authors = ["jmeisele <jmeisele@yahoo.com>"]
readme = "README.md"
packages = [{include = "aws_python_lambda_layer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
boto3 = "^1.26.146"
aws-xray-sdk = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
